--- a/settings.yml
+++ b/settings.yml
@@ -1,7 +1,7 @@
 
 # Use this file to set global project settings:
 
-data_file: "./data/model_inputs.xlsx"
+data_file: "./data/metapopulation-inputs.xlsx"
 
 # load c19model package with devtools::load_all?
 # if FALSE load from installed package
