--- a/settings.yml
+++ b/settings.yml
@@ -1,3 +1,24 @@
+#------------------------------------------------------------------------------#
+# Code for "The value of environmental sampling surveillance"
+# Copyright (C) 2024 by The RAND Corporation
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#
+# See LICENSE.md and README.md for more information on usage and licensing
+#
+# Author: Pedro Nascimento de Lima
+#------------------------------------------------------------------------------#
 
 # Increase n_reps to 1,000 for a real-scale run.
 # Only do that in a capable machines
@@ -6,6 +27,9 @@ n_reps: 10
 
 # How many cores to use if running simulations in parallel
 n_cores: 6
+
+# Set random seed:
+seed: 1234
 
 # Whether to run simulations in parallel
 parallel: TRUE
